<resources>
    <string name="app_name">ExpressionCalculator</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="multiply">×</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">−</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="division">÷</string>
    <string name="backspace">DEL</string>
    <string name="clear">AC</string>
    <string name="num_hint">enter expression here…</string>
    <string name="lbracket">(</string>
    <string name="rbracket">)</string>
    <string name="ac">ac</string>
    <string name="del">del</string>
    <string name="plusminus">±</string>
    <string name="sqroot">√</string>
    <string name="curoot">∛</string>
    <string name="power">^</string>
    <string name="percent">%</string>
</resources>
