<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/numBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="84dp"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="end | bottom"
            android:hint="@string/num_hint"
            android:inputType="textVisiblePassword"
            android:textSize="20sp"
            android:layout_margin="4dp"
            android:background="@android:color/darker_gray"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_lbracket"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/lbracket"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numBox" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_rbracket"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/rbracket"
            android:textSize="28sp"
            app:layout_constraintLeft_toRightOf="@+id/button_lbracket"
            app:layout_constraintTop_toBottomOf="@+id/numBox" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_del"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/del"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@+id/button_plusminus"
            app:layout_constraintTop_toBottomOf="@+id/numBox" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_ac"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/ac"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@+id/button_del"
            app:layout_constraintTop_toBottomOf="@+id/numBox" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_plusminus"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/plusminus"
            android:textSize="28sp"
            app:layout_constraintLeft_toRightOf="@+id/button_rbracket"
            app:layout_constraintTop_toBottomOf="@+id/numBox" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_7"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_lbracket" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_8"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button_lbracket" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button9"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_9"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button_lbracket" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_divide"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/division"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button_lbracket" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_sqroot"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/sqroot"
            android:textSize="28sp"
            app:layout_constraintLeft_toRightOf="@+id/button_divide"
            app:layout_constraintTop_toBottomOf="@+id/button_lbracket" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_4"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_5"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_6"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_multiply"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/multiply"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_curoot"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/curoot"
            android:textSize="28sp"
            app:layout_constraintLeft_toRightOf="@+id/button_multiply"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_1"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_2"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_3"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_minus"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/minus"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_power"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/power"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button_minus"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_dot"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/point"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button0"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/_0"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_equals"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/equals"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_plus"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/add"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@+id/button_equals"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_percent"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:text="@string/percent"
            android:textSize="28sp"
            app:layout_constraintLeft_toRightOf="@+id/button_plus"
            app:layout_constraintTop_toBottomOf="@+id/button1" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>